preview : xuất theo phương thức bán đấu giá>Qđ pd kết quả bán đấu giá

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,4 +53,5 @@ management:
 
 #path font pdf
 path:
-  url: "/u01/QLNV/font/times.ttf"
+#  url: "/u01/QLNV/font/times.ttf"
+  url: "src/main/resources/font/times.ttf"
