update ctvt qdgnv

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,4 +55,4 @@ management:
 path:
 #  url: "/u01/QLNV/font/times.ttf"
   url: "src/main/resources/font/times.ttf"
-  base-report-folder: "./reports/"
+  base-report-folder: "src/main/resources/reports/"
